--- a/middlepj/src/main/webapp/view/NewFile.html
+++ b/middlepj/src/main/webapp/view/NewFile.html
@@ -1,89 +1,76 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-    <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
-<%@ page import="middle.vo.qnaVO"%>
-
-<%@ page import="java.util.List"%>
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>0506 평가</title>
+  <style>
+    #container{
+      width: 750px;
+      margin: 30px auto;
+      font-family: "맑은 고딕", '돋움', '굴림';
+      border: 1px solid gray;
+    }
+    #form{
+      width: 580px;
+      float: left;
+      margin-left: 20px;
+      margin-top: 10px;
+    }
+    #form label {
+      width: 150px;
+      height: 19px;
+      float: left;
+      text-align: center;
+      font-weight: 600;
+      background: wheat;
+      margin-right: 5px;
+      margin-top: 3px;
+    }
+    #form input {
+      width: 400px;
+    }
+    #button {
+      width: 140px;
+      display: block;
+      float: left;
+      text-align: center;
+      margin-top: 40px;
+    }
+    #button button {
+      width: 70px;
+      margin: 5px;
+    }
+    #list {
+      clear: both;
+      margin-top: 150px;
+      margin-bottom: 10px;
+    }
+    #list table {
+      width: 750px;
+      text-align: center;
+    }
+    #list table thead{
+      background: rgb(69, 69, 69);
+      color: white;
+    }
+    #list table thead tr th {
+      font-weight: normal;
+    }
+
+  </style>
 </head>
+
 <body>
-<h2>QnA게시글관리</h2>
-	<c:choose>
-		<c:when test="${empty list}">
-			<h3>QnA정보없슴</h3>
-		</c:when>
-		<c:otherwise>
-			<table border="1">
-				<thead>
-					<tr>
-						<th>QnA번호</th>
-						<th>물건코드</th>
-						<th>QnA카테고리</th>
-						<th>QnA글쓴이</th>
-						<th>QnA글비번</th>
-						<th>QnA제목</th>
-						<th>QnA내용</th>
-						<th>QnA날짜</th>
-						
-					</tr>
-
-				</thead>
-				<tbody>
-					<c:forEach items="${list}" var="qna">
-				<tr>
-					<form action="qnaDelete.do" method="post">
-						<td>${qna.qnaNo}</td>
-						<td>${qna.productCode}</td>
-						<td>${qna.qnaCategory}</td>
-						<td>${qna.qnaWrite}</td>
-						<td>${qna.qnaPw}</td>
-						<td>${qna.qnaTitle}</td>
-						<td>${qna.qnaContent}</td>
-						<td>${qna.qnaDate}</td>
-						<td><input type="submit" value="한건삭제">
-								<input type="hidden" name=qnaNo value=${qna.qnaNo }>
-						</td>
-					</form>
-				</tr>
-				</c:forEach>
-				</tbody>
-
-				<tr>
-				  <td>
-					<input type="submit" value="수정">
-					<input type="submit" value="삭제">
-				  </td>
-				</tr>
-			</table>
-		</c:otherwise>
-	</c:choose>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	<div id="container">
+  <div id="container">
     <div id="form">
-      <label>QnA번호</label><input type="text" id="qnaNo"><br>
-      <label>물건코드</label><input type="text" id="productCode"><br>
-      <label>QnA카테고리</label><input type="text" id="qnaCategory"><br>
-      <label>QnA글쓴이</label><input type="text" id="qnaWrite"><br>
-      <label>QnA글비번</label><input type="text" id="qnaPw"><br>
-      <label>QnA제목</label><input type="text" id="qnaTitle"><br>
-      <label>QnA내용</label><input type="text" id="qnaContent"><br>
-      <label>QnA날짜</label><input type="text" id="qnaDate"><br>
-      
+      <label>도서코드</label><input type="text" id="bCode"><br>
+      <label>도서명</label><input type="text" id="bTitle"><br>
+      <label>저자</label><input type="text" id="bWriter"><br>
+      <label>출판사</label><input type="text" id="bCom"><br>
+      <label>금액</label><input type="text" id="bPrice"><br>
     </div>
     <div id="button">
       <button id="submit">저장</button>
@@ -94,14 +81,12 @@
         <thead>
           <tr>
             <th><input type="checkbox" name="allCk" onclick="allCheck(this)"></th>
-                    <th>QnA번호</th>
-			  		<th>물건코드</th>
-					<th>QnA카테고리</th>
-					<th>QnA글쓴이</th>
-					<th>QnA글비번</th>
-					<th>QnA제목</th>
-					<th>QnA내용</th>
-					<th>QnA날짜</th>
+            <th>도서코드</th>
+            <th>도서명</th>
+            <th>저자</th>
+            <th>출판사</th>
+            <th>가격</th>
+            <th>삭제</th>
           </tr>
         </thead>
         <tbody id="body">
@@ -152,34 +137,24 @@
     init();
     //
 
-    function addBook() { //  목록 추가
-      
-    
-	  let qnaDate, qnaNo, qnaPw, qnaCategory, productCode, 
-	  qnaWrite, qnaTitle, qnaContent, id
-	  
-	  qnaDate = document.getElementById('qnaDate').value; 
-	  qnaNo = document.getElementById('qnaNo').value;
-	  qnaPw = document.getElementById('qnaPw').value;
-	  qnaCategory = document.getElementById('qnaCategory').value;
-	  productCode = document.getElementById('productCode').value; 
-	  qnaWrite = document.getElementById('qnaWrite').value;
-	  qnaTitle = document.getElementById('qnaTitle').value;
-	  qnaContent = document.getElementById('qnaContent').value;
-	  id = document.getElementById('id').value;
-	 
+    function addBook() { // 책 목록 추가
+      let bookCode, bookTitle, bookWriter, bookCompany, bookPrice;
+
+      bookCode = document.getElementById('bCode').value;
+      bookTitle = document.getElementById('bTitle').value;
+      bookWriter = document.getElementById('bWriter').value;
+      bookCompany = document.getElementById('bCom').value;
+      bookPrice = document.getElementById('bPrice').value;
+
       let book = {
-    	qnaDate : qnaDate,
-    	qnaNo : qnaNo,
-    	qnaPw : qnaPw,
-    	qnaCategory : qnaCategory,
-    	productCode : productCode,
-    	qnaWrite : qnaWrite,
-    	qnaTitle : qnaTitle,
-    	qnaContent : qnaContent,
-    	id : id
+        bookCode: bookCode,
+        bookTitle: bookTitle,
+        bookWriter: bookWriter,
+        bookCompany: bookCompany,
+        bookPrice: bookPrice
       }
       document.getElementById('body').appendChild(makeTr(book));
+      
       document.getElementById('bCode').value = '';
       document.getElementById('bTitle').value = '';
       document.getElementById('bWriter').value = '';
@@ -232,8 +207,6 @@
 
     
   </script>
-
-	
-	
 </body>
+
 </html>
