--- a/middlepj/src/main/webapp/css/styles.css
+++ b/middlepj/src/main/webapp/css/styles.css
@@ -1,3 +1,4 @@
+
 @charset "UTF-8";
 /*!
 * Start Bootstrap - Shop Item v5.0.5 (https://startbootstrap.com/template/shop-item)
@@ -10,6 +11,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
